# CoCBot

./: .gitignore  CMakeLists.txt  README.md  screencap.bat
src/: bot.cpp  bot.hpp  device.cpp  device.hpp  main.cpp  util.cpp  util.hpp
